Changes for 1.8.0.0
* Added logfile "dump" command for host bots, that will from the command line print out all status, connection, memory, and thread information to the log. (veqryn)

* Created ability for lobby admins to mute and/or boot players in a host bot, remotely. (veqryn)

* Created ability for lobby admins to see the player connections in any host game. (veqryn)

* Created ability for lobby admins to see chatlog of a host bot remotely. (veqryn)

* Adding a new autosave, 'autosave2', which will take turns being saved to with 'autosave'. (veqyrn)

* Changing movement validation to disallow moving from a contested battle territory into an enemy territory. (veqryn)

* Fixed bug with a territory owned by one player but having enemy units in it, if the owned reconquers the territory it is no longer marked as newly-conquered. (veqryn)

* Fixed bug preventing sounds inside a zipped map from playing if the zipped map file path had any spaces or special characters in it. (veqryn)

* Fixed bug preventing phase sounds from playing more than once in a non-pbem game. (veqryn)

* Creating an option to select local players and AI's for PBEM games. AI's will not post/email the turn summary and savegame at the ends of their turns however. (veqryn)

* Fixing bug with host bots where disabling players, quitting, then reloading and disabling even more players, resulted in game crash. (veqryn)

* Disallowing previously disabled players from being re-enabled after a game has started. (veqryn)

* Fixed bug with moderator lobby unbanning utility. (veqryn)

* Created ability for lobby admins to ban players inside a host bot, remotely. (veqryn)

* Created ability for lobby admins to stop game on a host bot remotely. (veqryn)

* Created ability for lobby admins to shut down a host bot remotely. (veqryn)

* Created new option for host bots, "triplea.lobby.game.supportPassword", which when set will allow remote actions on the host bot from the lobby admins. (veqryn)
